migrate build to javafx11